--- a/src/main/webapp/WEB-INF/views/people/update.html
+++ b/src/main/webapp/WEB-INF/views/people/update.html
@@ -9,7 +9,8 @@
 <body>
 
 
-<form th:method="POST" th:action="@{/people/update}" th:object="${person}">
+<form th:method="POST" th:action="@{/people/update/{id}(id=${person.getId()})}" th:object="${person}">
+    <div th:text="${person.getId()}"></div>
     <input type="text" th:field="*{fio}" id="fio" th:value="*{fio}">
     <br>
     <input type="submit" value="update">
